tests/compile-fail/bad_include_tuple.rs
/*
 * Copyright (C) 2021 - 2025 Michael Gattozzi <michael@ductile.systems>
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

use assay::assay;

#[assay(include = [("source.txt", 123)])]
fn bad_include_dest() {}

fn main() {}
